--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,9 @@ html{
 }
 .web-dev{
     width: 50%;
-    height: 50%;
+    height: 32%;
 }
+
 
 
 header{
@@ -125,7 +126,7 @@ header nav .left a:hover{
     color: var(--primary);
 }
 #upCV a{
-    text-decoration: none;
+    text-decoration: underline;
     color: var(--primary);
 }
 #upCV:hover a{
@@ -175,7 +176,7 @@ section{
 }
 section.about .about-me-image{
     height: 409px;
-    width: 87%;
+    width: 103%;
     margin-left: -2rem;
 }
 section.about h1{
@@ -238,7 +239,7 @@ section.about .social a{
    .section-heading + p{ /*means section heading k baad next p m style krna h*/
        color: var(--ternary);
        font-family:'Lato',sans-serif;
-       margin-bottom: 8rem;
+       margin-bottom: 5rem;
        text-align: center;
 
    }
@@ -353,7 +354,7 @@ padding-bottom: 14rem;
     section.work .card-wrapper{
         display: grid;
         grid-template-columns: repeat(3,1fr);
-        grid-gap: 2rem;
+        grid-gap: 5rem;
     }
     section.work .card-wrapper .card{
         position: relative;
@@ -363,8 +364,8 @@ padding-bottom: 14rem;
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 104%;
+        height: 116%;
         background: rgba(61,207,211,0.9);
         display: flex;
         justify-content: center;
@@ -386,8 +387,8 @@ padding-bottom: 14rem;
         /* text-decoration: none; */
     }
     section.work .card-wrapper .card img{
-        height: 100%;
-        width: 100%;
+        height: 116%;
+        width: 104%;
     }
     section.blog{
         background: var(--dark);
@@ -419,7 +420,7 @@ padding-bottom: 14rem;
     section.blog .card-wrapper .card .img-wrapper img{
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
     }
     section.blog .card-wrapper .card .card-content{
         padding: 1rem;  /* top bottom padding*/
@@ -463,11 +464,11 @@ padding-bottom: 14rem;
     section.contact .card-wrapper .card img{
         margin-bottom: 3rem;
     }
-    section.contact .card-wrapper .card img:hover{
+    /* section.contact .card-wrapper .card img:hover{
         /* transform: translateY(1rem); */
-        transform: scale(2);
+        /* transform: scale(2);
         
-    }
+    } */ 
     .mail{
         margin-top: -2rem;
     }
@@ -641,8 +642,9 @@ filter: invert(100%);
     }
     button.btn.btn-primary{
         margin-left: 0rem;
-     padding: 0.8rem 1rem;
+        padding: 0.8rem 1rem;
     }
+    
     .logo-creative{
         width:90%;
         margin-left: 1rem;
@@ -703,7 +705,7 @@ filter: invert(100%);
     section.contact .input-wrap{
         grid-template-columns: repeat(1,1fr);
     }
- #arrow{
+    #arrow{
         
         margin-left: 90%;
         margin-top: 80%;
