--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,714 @@
-.flex{
-    display: flex;  /*sabko ek line m lane k liye*/
+ @import 'utilities.css';
+ :root{ /* can be accessed anywhere in the code */
+    --primary:#3DCFD3;
+    --dark:#161616;
+    --pure:white;
+    --ternary:rgb(138, 120, 120);
+       --light:#F2F2F2;
+--secondary:#070606;
 
 }
-.items-center
-{
-    align-items: center;
+#arrow{
+    position: fixed;
+    z-index: 11111111111;
+    margin-left: 97%;
+    margin-top: 40%;
+    height: 2.4rem;
+    width: 2.5rem;
 }
-.justify-between
-{
-    justify-content: space-between;
+#portfolio{
+    height: 100%;
 }
-.btn{
-    padding: 0.8rem 3rem;
-    font-size: 1rem;
-    font-weight: 600;
-    border: 2px solid transparent;
-    outline: none;
-    cursor: pointer;
+#arrow:hover{
+    background: var(--primary);
+}
+#qwiklab{
+    width: 57px;
+    height: 35px;
+   
+}
+#instagram{
+    width: 57px;
+    height: 44px;
+}
+#inst{
+    width: 57px;
+    height: 56px;
+    margin-bottom: -0.5rem;
+}
+#qwik{
+    width: 84px;
+    height: 44px;
+    margin-left: -1.2rem;
+}
+
+body{
+    font-family: 'Poppins', sans-serif;
+    /* height: 8000px; */
+}
+html{
+    scroll-behavior: smooth;
+}
+.web-dev{
+    width: 50%;
+    height: 32%;
+}
+
+
+
+header{
+     background: var(--dark); /* for bg black color */
+    /* height: 800px; */
+    clip-path: polygon(0 0,100% 0,100% 100%,70% 87%,0 100%); /*polygon with 5 sides in our website */
+}
+*{  /*sare elements k liye*/
+    padding: 0;  /*pura fill krne k liye*/
+    margin: 0;  /* center m lane k liye left-right s auto*/
+    box-sizing: border-box;
+    -webkit-font-smotthing:antialiased;
+}
+.container{
+    max-width: 1152px;
+    padding: 0 15px;  /*top-bottom  left-right*/
+    margin: 0 auto;
+}
+@media (min-width: 576px) {/*if screen ki width 576 k upar jati h to container ki max wdth 540 honi chahiye*/
+
+    .container{
+        max-width: 540px;
+    }
+    
+}
+@media (min-width:768px){
+    .container{
+        max-width: 720px;
+    }
+}
+@media(min-width:992px){
+    .container{
+        max-width: 960px;
+    }
+}
+@media (min-width: 1200px)
+{
+    .container{
+        max-width: 1152px;
+    }
+}
+header nav .left a{
+    color: var(--pure);
+    text-decoration: none;
+    margin-right: 2rem;
     text-transform: uppercase;
     transition: all .3s ease;
 }
-.btn-primary{
-    background: var(--primary);
+header nav .right a{
+    text-decoration: none;
+    color: var(--dark);
+}
+header nav .right :hover a{ 
+    color: var(--primary);
+}
+header nav{
+    padding: 2rem 0;
+ 
+}
+/* #navbar{
+    position: fixed;
+  
+} */
+
+
+header nav.branding{
+    margin-right: 3rem;
+}
+header nav .left a:hover{
+    color: var(--primary);
+}
+#upCV a{
+    text-decoration: underline;
+    color: var(--primary);
+}
+#upCV:hover a{
+    color: var(--dark);
+}
+#CV a{
+    text-decoration: none;
+    color: var(--dark);
+}
+#CV:hover a{
+    color: var(--primary);
+}
+.hero{
+    padding: 6rem 0;
+    margin-bottom:-5rem;
+    padding-bottom: 12rem;
+}
+.hero .left img{
+    width: 400px;
+}
+.hero .right{
+    color: var(--pure);
+}
+.hero .right h6{
+    font-size: 1.6rem;
+    color: var(--primary);
+    margin-bottom: 0.5rem;
+}
+.hero .right h1{
+    font-size: 4rem;
+    font-weight: 100;
+    line-height: 1.2;
+    margin-bottom: 2rem;
+}
+.hero .right h1 span{
+    color: var(--primary);
+}
+.hero .right p{
+    line-height: 1.9;
+    margin-bottom: 2rem;
+}
+.hero .right{
+    margin-top: -7rem; /*upar lene k liye*/
+}
+section{
+    padding: 6rem 0;
+}
+section.about .about-me-image{
+    height: 409px;
+    width: 103%;
+    margin-left: -2rem;
+}
+section.about h1{
+    margin-bottom: 1rem;
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+section.about h1 span{
+    color: var(--primary);
+}
+section.about h3{
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 400;
+}
+section.about p{
+    font-family: 'Lato', sans-serif;
+color: var(--ternary);
+line-height: 1.9;
+margin-bottom: 2rem;
+}
+section.about .social{
+    display: flex;/*sare icons ek line m ajaye*/
+    
+ }
+ .social{
+    margin-left: 6rem;
+}
+section.about .social a{
+    /* background: var(--dark); */
+     display: flex;
+    align-items: center;
+    justify-content: center; 
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    margin-right: 0.6rem;
+    transition: all .3s ease;
    
+    
+   }
+   section.about .social a:hover{
+       background: var(--primary);
+       transform: translateY(-1rem);
+   }
+   section.about .social a img{
+       width: 100%;
+       height: 100%;
+       /* padding: 0.1rem; */
+   }
+   .section-heading{
+       color: var(--secondary);
+       text-align: center;
+       margin-bottom: 1rem;
+       line-height: 0.5;
+   }
+   .section-heading span{
+       color: var(--primary);
+   }
+   .section-heading + p{ /*means section heading k baad next p m style krna h*/
+       color: var(--ternary);
+       font-family:'Lato',sans-serif;
+       margin-bottom: 5rem;
+       text-align: center;
+
+   }
+   /* .image{
+       color: var(--primary);
+   } */
+   section.services .card-wrapper{
+       display: grid;
+       grid-template-columns: repeat(3,1fr); /*3 columns*/
+       grid-column-gap: 2rem;
+       grid-row-gap: 6rem;
+   }
+   section.services{
+       background: var(--light);
+   }
+   section.services .card-wrapper .card{
+
+    background: var(--pure);
+    padding: 3rem 2rem;
+    position: relative;  /*this is needed because koi bhi chiz ko absolute krte h to uske parent ko relative krna hota h taki ksike relative hame psoition krna h isluye. try to remove this statment and run.*/
+    padding-top: 5rem;
+    text-align: center;
+    transform: all .3s ease;
+   }
+   section.services .card-wrapper .card img{
+       position: absolute;
+       top: -3.5rem;
+       left: 50%;
+       transform: translateX(-50%);  /*translateX means shift in horizontal direction */
+   } /* left m khichne k liye -50% */
+   section.services .card-wrapper .card h2{
+       font-weight: 500;
+       font-size: 1.2rem;
+       margin-bottom: 0.5rem;
+   }
+   section.services .card-wrapper .card  p{
+       font-family: 'Lato',sans-serif;
+       color: var(--ternary);
+       line-height: 1.6;
+   }
+   
+   section.services .card-wrapper .card:hover{
+       background: var(--dark);
+   }
+   section.services .card-wrapper .card:hover h2,section.services .card-wrapper .card:hover p{
+       color: var(--pure);
+   }
+   section.freelancer{
+       text-align: center;
+       background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../images/camera.png);/* .7 is opacity   ../images because ham style.css m h and ek file back jana h hame*/
+color: var(--pure);
+clip-path: polygon(0 0,100% 0,100% 100%,67% 80%,0 100%); /*polygon with 5 sides in our website */
+padding-bottom: 14rem;
+   }
+   section.freelancer h1{
+       font-size: 2rem;
+       margin-bottom: 0.5rem;
+   }
+   section.freelancer p{
+       margin-bottom: 2rem;
+       font-family: 'Lato',sans-serif;
+   }
+   section.reviews .slider .slide img{
+       width: 100px;
+       height: 100px;
+       border-radius: 50%; /*image round krne k liye*/
+       object-fit: cover;  /*object ka width height sare ratio shi ho jaye*/
+       margin-bottom: 2rem;
+   }
+   section.reviews .slider .slide{
+       text-align: center;
+       display: flex;
+       align-items: center;
+       flex-direction: column;
+       padding: 0 10rem;
+   }
+   section.reviews .slider .slide p{
+       font-family: 'lato',sans-serif;
+       color: var(--ternary);
+       margin-bottom: 1rem;
+   }
+   section.reviews .slider .slide span{
+       font-size: 0.8rem;
+   }
+   section.reviews .slider-dots .dots{
+       list-style-type: none;
+       display: flex!important;  /* slick slider ki jo properties h vo easily change nhi hoti isliye imp kiya use*/
+       justify-content: center;
+   }
+   section.reviews .slider-dots {
+       margin-top: 3rem;
+   }
+   section.reviews .slider-dots button{
+       font-size: 0;
+       width: 8px;
+       height: 5px;
+      margin-right: 0.3rem;
+      border: none;
+      outline: none;
+      background: var(--ternary);
+      border-radius: 50px;
+      cursor: pointer;
+   }
+   section.reviews .dots li.slick-active button{
+       background: var(--primary); /*dynamically y add hori try to inspect it*/
+       width: 20px;
+ 
+    }
+    section.work{
+        background: var(--light);
+    }
+    section.work .card-wrapper{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-gap: 5rem;
+    }
+    section.work .card-wrapper .card{
+        position: relative;
+        height: 250px;
+    }
+    section.work .card-wrapper .card .overlay{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 104%;
+        height: 116%;
+        background: rgba(61,207,211,0.9);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column; /* isse category upar and web dev niche ajayega*/
+        color: var(--light);
+        opacity: 0;
+        transition: all .3s ease;
+    }
+    section.work .card-wrapper .card:hover .overlay{
+        opacity: 1;
+        
+    }
+    section.work .card-wrapper .card a:hover {
+        color: darkblue;
+    }
+    section.work .card-wrapper .card .overlay a{
+        color: var(--secondary);
+        /* text-decoration: none; */
+    }
+    section.work .card-wrapper .card img{
+        height: 116%;
+        width: 104%;
+    }
+    section.blog{
+        background: var(--dark);
+        clip-path: polygon(0 0,100% 0,100% 100%,67% 90%,0 100%);
+        padding-bottom: 12rem;
+    }
+   
+    section.blog .section-heading{
+        color: var(--pure);
+        font-size: 2rem;
+    }
+    section.blog .card-wrapper{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-gap: 5rem;
+        
+    }
+    section.blog .card-wrapper .card{
+        background: var(--pure);
+        transition: all .3s ease;
+    }
+    section.blog .card-wrapper .card:hover{
+        transform: scale(0.9);
+    
+    }
+    .section-heading +p{
+        font-size: 1.5rem;
+    }
+    section.blog .card-wrapper .card .img-wrapper img{
+  width: 100%;
+  height: 100%;
+  /* object-fit: cover; */
+    }
+    section.blog .card-wrapper .card .card-content{
+        padding: 1rem;  /* top bottom padding*/
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    section.blog .card-wrapper .card .card-content h1{
+        font-size: 1.5rem;
+        font-weight: 800;
+    }
+    section.blog .card-wrapper .card .card-content a{
+        color: var(--secondary);
+        text-decoration: none;
+        
+    }
+    section.blog .card-wrapper .card .card-content a:hover{
+     color: var(--primary);
+    }
+    section.blog .card-wrapper .card .card-content span{
+        color: var(--ternary);
+        font-size: 1rem;
+    }
+    section.blog .card-wrapper .card .card-content p{
+        font-family: 'lato',sans-serif;
+        color: var(--ternary);
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    font-size: 1.3rem;
+    }
+    section.blog .card-wrapper .card .card-content a.read-more{
+        font-size: 0.8rem;
+    }
+    section.contact .card-wrapper{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-gap: 3;
+    }
+    section.contact .card-wrapper .card{
+        text-align: center;
+    }
+    section.contact .card-wrapper .card img{
+        margin-bottom: 3rem;
+    }
+    /* section.contact .card-wrapper .card img:hover{
+        /* transform: translateY(1rem); */
+        /* transform: scale(2);
+        
+    } */ 
+    .mail{
+        margin-top: -2rem;
+    }
+    section.contact .card-wrapper .card h1{
+        font-weight: 400;
+        margin-bottom: 1rem;
+ }
+ section.contact .card-wrapper .card h6{
+     font-size: 1rem;
+     color: var(--ternary);
+     font-weight: 400;
+     margin-bottom: 4rem;
+ }
+ section.contact .input-wrap{
+     display: grid;
+     grid-template-columns: repeat(2,1fr);
+     grid-gap: 2rem;
+     margin-bottom: 2rem;
+ }
+ section.contact .input-wrap-2{
+     display: flex;
+     flex-direction: column; /*isse subjcet and message upar niche ajayege*/
+    
+ }
+ section.contact input{
+     padding: 0.5rem ;
+     border: 2px solid var(--light);
+     font-size: 0.9rem;
+ }
+ section.contact .input-wrap-2 input{
+     margin-bottom: 2rem;
+ }
+ section.contact .input-wrap-2 textarea{
+     padding: 0.5rem;
+     border: 2px solid var(--light);
+     font-size: 0.9rem;
+ }
+ section.contact input:focus,section.contact .input-wrap-2 textarea:focus{
+     outline: none;
+ }
+ section.contact .btn-wrapper{
+     text-align: center;
+     margin-top: 2rem;
+ }
+  footer{
+     background: var(--dark);
+     text-align: center;
+     padding: 5rem 0;
+ }
+ footer .footer-logo{
+     margin-bottom: 3rem;
+     width: 150px;
+ }
+ footer .footer-socials a{
+margin-right: 0.5rem;
+filter: invert(100%);
+ }
+ footer .footer-socials{
+     margin-bottom: 2rem;
+     margin-right: -1rem;  /* logo right m ajaye*/
+     margin-bottom: 3rem;
+ }
+ .fs:hover{
+     transform: translateY(-1rem);
+ }
+ footer .copyright{
+    color: var(--ternary);
+ }
+ 
+ .site-main-wrapper{
+     position: relative;
+ }
+ .hamberger{
+     position: absolute;
+     top: 40px;
+     right: 40px;
+     z-index: 11;
+     background: none;
+     border: none;
+     outline: none;
+     cursor: pointer;
+     display: none;
+ }
+ .hamberger img{
+     width: 30px;
+ }
+ .mobile-nav{
+     position: fixed;
+     top: 0;
+     left: 0;
+     z-index: 1001;
+     background: var(--light);
+     width: 100%;
+     height: 100%;
+     padding: 2rem;
+     padding-top: 5rem;
+     transform: translateX(-100%);/*100 % left side move ho jayega means pura screen k bahar chla jayega*/
+  transition: all .5s ease-in-out;
+ }
+ .open{  /*css class*/
+     transform: translateX(0);/*original position p ajaye firse*/
+
+ }
+ .times{
+     position: fixed;/*or absolute*/
+     top: 30px;
+     right: 30px;
+     border: none;
+     background: none;
+     outline: none;
+     cursor: pointer;
+ }
+ .times img{
+     width: 30px;
+
+ }
+ .mobile-nav ul{
+     list-style-type: none;
+ }
+ .mobile-nav ul li a{
+     color: var(--secondary);
+     text-decoration: none;
+     font-size: 2rem;
+ }
+ @media (max-width:1024px){
+    header #main-nav{
+        display: none;
+    }
+    .btn-primary{
+        width: 58%;
+        margin-right: 5rem;
+     padding-left: 0rem;
+    }
+   
+    .hamberger{
+        display: block;
+    }
+    .hero .left img{
+        width: 260px;
+    }
+    .hero .right h1{
+        font-size: 3rem;
+    }
+    .hero{
+        padding-top: 10rem;
+    }
+    header{
+        clip-path: polygon(0 0,100% 0,100% 100%,27% 89%, 0 100%);
+    }
+    section.about .about-me-image{
+        height: 360px;
+    }
+    section.services .card-wrapper{
+        grid-template-columns: repeat(2,1fr);
+    }
+    section.work .card-wrapper{
+        grid-template-columns: repeat(2,1fr);
+    }
+    section.blog .card-wrapper{
+        grid-template-columns: repeat(1,1fr);
+    }
+    section.blog{
+        clip-path: polygon(0 0,100% 0,100% 100%,67% 97%,0 100%);
+    }
+    
 }
-.btn-primary:hover{
-    background: transparent;
-    border-color: var(--primary);
-    color: var(--primary);
-}
-.btn-secondary{
-    background: transparent;
-    color: var(--primary);
-    border-color: var(--primary);
-}
-.btn-secondary:hover{
-    background: var(--primary);
-    color: var(--secondary);
-}
-.flex-1{
-    flex: 1;
-}
-.justify-center{
-    justify-content: center;
+
+@media (max-width: 683px){
+    .hero{
+        flex-direction: column;
+    }
+    button.btn.btn-primary{
+        margin-left: 0rem;
+        padding: 0.8rem 1rem;
+    }
+    
+    .logo-creative{
+        width:90%;
+        margin-left: 1rem;
+    }
+    /* .btn-primary{
+        margin-left: -2rem;
+    } */
+    header{
+        clip-path: polygon(0 0,100% 0,100% 100% 69% 95%,0 100%);
+    }
+    .hero .right{
+        position: absolute;
+        top: 260px;
+        padding: 0 1rem;
+        background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.9));  /*upar ka colour black h and niche k black color ki opacity thodi kam h*/
+    }
+    .hero .left{
+        margin-top: -5rem;/*upar khichne k lye*/
+        margin-right: -9rem;/*/*right push krne k liye*/
+        padding-bottom: 4rem;
+    }
+    .about-inner-wrap{
+        flex-direction: column;
+    }
+    .about .right{
+        text-align: center;
+        margin-top: 2rem;
+    }
+    .about .right .social{
+          justify-content: center;
+    }
+    section{
+        padding: 4rem 0;
+    }
+    section.services .card-wrapper{
+          grid-template-columns: repeat(1,1fr);
+            margin-top: 6rem;
+        }
+    section.freelancer h1{
+        line-height: 1.2;
+    }
+    section.freelancer{
+        clip-path: polygon(0 0,100% 0,100% 100%,67% 90%,0 100%);
+    padding-bottom: 8rem;
+    }
+    section.reviews .slider .slide{
+        padding: 0;
+    }
+    .section-heading +p{
+        margin-bottom: 3rem;
+    }
+    section.work .card-wrapper{
+        grid-template-columns: repeat(1,1fr);
+    }
+    section.contact .card-wrapper{
+        grid-template-columns: repeat(1,1fr);
+    }
+    section.contact .input-wrap{
+        grid-template-columns: repeat(1,1fr);
+    }
+    #arrow{
+        
+        margin-left: 90%;
+        margin-top: 80%;
+        
+    }
 }
